# face-recognition-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
